--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ itsdangerous==2.1.2; python_version >= '3.7'
 jinja2==3.1.3; python_version >= '3.7'
 markupsafe==2.1.5; python_version >= '3.7'
 packaging==25.0; python_version >= '3.8'
+psycopg2-binary==2.9.10; python_version >= '3.8'
 werkzeug==3.0.1; python_version >= '3.8'
